--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -11,21 +11,17 @@
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-8">
-                <button class="btn btn-success" id="btn-like" data-id="{{ image.uniqueId }}">
-                    <i class="fa fa-heart">
-                        Like</i>
-                </button>
-                <strong class="likes-count">{{ image.likes }}
-                </strong> &nbsp; - &nbsp;
-                <i class="fa fa-eye">
-                </i>
-                <strong>{{ image.views }}</strong>
-                &nbsp; - &nbsp; Posted:
-                <em class="text-muted">{{ timeago image.timestamp }}</em>
+                <button class="btn btn-success" id="btn-like" data-id="{{ image.uniqueId }}"><i class="fa fa-heart"> Like</i></button>
+                <strong class="likes-count">{{ image.likes }}</strong> &nbsp; - &nbsp; <i class="fa fa-eye"></i> <strong>{{ image.views }}</strong>
+                &nbsp; - &nbsp; Posted: <em class="text-muted">{{ timeago image.timestamp }}</em>
+            </div>
+            <div class="col-md-4 text-right">
+                <button class="btn btn-danger" id="btn-delete" data-id="{{ image.uniqueId }}"><i class="fa fa-times"></i></button>
             </div>
         </div>
     </div>
 </div>
+
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -34,17 +30,14 @@
                 <strong class="panel-title">Comments</strong>
             </div>
             <div class="col-md-4 text-right">
-                <button class="btn btn-default btn-sm" id="btn-comment" data-id="{{ image.uniqueId }}">
-                    <i class="fa fa-comments-o"> Post Comment...
-                    </i>
-                </button>
+                <button class="btn btn-default btn-sm" id="btn-comment" data-id="{{ image.uniqueId }}"><i class="fa fa-comments-o"> Post Comment...</i></button>
             </div>
         </div>
     </div>
     <div class="panel-body">
         <blockquote id="post-comment">
             <div class="row">
-                <form method="post" action="/images/{{image.uniqueId }}/comment">
+                <form method="post" action="/images/{{ image.uniqueId }}/comment">
                     <div class="form-group col-sm-12">
                         <label class="col-sm-2 control-label" for="name">Name:</label>
                         <div class="col-sm-10">
@@ -65,9 +58,7 @@
                     </div>
                     <div class="form-group col-sm-12">
                         <div class="col-sm-12 text-right">
-                            <button type="submit" id="comment-btn" class="btn btn-success" type="button">
-                                <i class="fa fa-comment"></i>
-                                Post</button>
+                            <button type="submit" id="comment-btn" class="btn btn-success" type="button"><i class="fa fa-comment"></i> Post</button>
                         </div>
                     </div>
                 </form>
@@ -81,13 +72,11 @@
                 </a>
                 <div class="media-body">
                     {{ comment }}
-                    <br/>
-                    <strong class="media-heading">{{ name }}
-                    </strong>
-                    <small class="text-muted">{{ timeago timestamp }}</small>
+                    <br/><strong class="media-heading">{{ name }}</strong> <small class="text-muted">{{ timeago timestamp }}</small>
                 </div>
             </li>
             {{/each}}
         </ul>
+
     </div>
 </div>
